--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -71,7 +71,7 @@ body {
     opacity: 1;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    filter: brightness(0.8);
+    backdrop-filter: brightness(0.8);
 }
 
 #bg-menu {
@@ -141,7 +141,7 @@ body {
     opacity: 1;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    filter: brightness(0.8);
+    backdrop-filter: brightness(0.8);
     position: relative;
     left: 0;
     bottom: 0;
@@ -151,7 +151,7 @@ body {
     opacity: 1;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    filter: brightness(0.8);
+    backdrop-filter: brightness(0.8);
     position: relative;
     left: 0;
     bottom: 0;
@@ -225,24 +225,22 @@ body {
 #bg-footer {
     /* UI Properties */
     background: 0% 0% no-repeat padding-box;
-    filter: brightness(0.8);
     border-radius: 30px;
     opacity: 1;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    filter: brightness(0.8);
+    backdrop-filter: brightness(0.8);
 
 }
 
 .bg-footer {
     /* UI Properties */
     background: 0% 0% no-repeat padding-box;
-    filter: brightness(0.8);
     border-radius: 30px;
     opacity: 1;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    filter: brightness(0.8);
+    backdrop-filter: brightness(0.8);
 
 }
 
@@ -348,7 +346,7 @@ body {
 
 .menu-light {
     background: #ffffff2b;
-    filter: brightness(0.8);
+    backdrop-filter: brightness(0.8);
 }
 
 
