--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,7 +5,6 @@
 body {
     direction: rtl;
     font-family: yekanBakh;
-
 }
 
 #coinBox {
@@ -25,8 +24,7 @@ body {
 }
 
 #menu-right {
-
-    fill: #1D213B;
+    fill: #1d213b;
     border-radius: 30px;
     opacity: 1;
     backdrop-filter: blur(10px);
@@ -43,8 +41,6 @@ body {
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
 }
-
-
 
 #img-menu-right {
     top: 213px;
@@ -136,7 +132,6 @@ body {
     object-fit: cover;
 }
 
-
 #footer {
     opacity: 1;
     backdrop-filter: blur(10px);
@@ -147,7 +142,7 @@ body {
     bottom: 0;
     width: 100%;
 }
-.footer{
+.footer {
     opacity: 1;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
@@ -159,17 +154,16 @@ body {
 }
 
 #about-bg {
-    background: #FFFFFF2B 0% 0% no-repeat padding-box;
+    background: #ffffff2b 0% 0% no-repeat padding-box;
     border-radius: 30px;
     opacity: 1;
 }
 
 #footer-icon {
     /* UI Properties */
-    background: #FFFFFF2B 0% 0% no-repeat padding-box;
+    background: #ffffff2b 0% 0% no-repeat padding-box;
     opacity: 1;
 }
-
 
 #contact-form {
     /* UI Properties */
@@ -186,41 +180,38 @@ body {
 } */
 .contact-input {
     /* UI Properties */
-    background: #FFFFFF2B 0% 0% no-repeat padding-box;
+    background: #ffffff2b 0% 0% no-repeat padding-box;
     border-radius: 41px;
     border: none;
     opacity: 1;
 }
 
-
 #contact-button {
-    background: #08B5BD 0% 0% no-repeat padding-box;
+    background: #08b5bd 0% 0% no-repeat padding-box;
     border-radius: 41px;
     opacity: 1;
 }
 
 #contact-icon {
     /* UI Properties */
-    background: #FFFFFF2B 0% 0% no-repeat padding-box;
+    background: #ffffff2b 0% 0% no-repeat padding-box;
     opacity: 1;
 }
 
 #contact-icon-bg {
-    background: #110B53 0% 0% no-repeat padding-box;
+    background: #110b53 0% 0% no-repeat padding-box;
     border-radius: 15px;
     opacity: 1;
 }
 
-
 #app-box {
     /* UI Properties */
-    background: #FFFFFF2B 0% 0% no-repeat padding-box;
+    background: #ffffff2b 0% 0% no-repeat padding-box;
     border-radius: 41px;
     opacity: 1;
     backdrop-filter: blur(30px);
     -webkit-backdrop-filter: blur(30px);
 }
-
 
 #bg-footer {
     /* UI Properties */
@@ -230,7 +221,6 @@ body {
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: brightness(0.8);
-
 }
 
 .bg-footer {
@@ -241,13 +231,10 @@ body {
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: brightness(0.8);
-
 }
 
-
-
 .middle {
-    transition: .5s ease;
+    transition: 0.5s ease;
     opacity: 0;
     position: absolute;
     top: 50%;
@@ -274,7 +261,7 @@ body {
     display: block;
     width: 100%;
     height: auto;
-    transition: .5s ease;
+    transition: 0.5s ease;
     backface-visibility: hidden;
 }
 
@@ -282,16 +269,12 @@ body {
     position: relative;
 }
 
-
 #article-box {
     /* UI Properties */
-    background: #110B53 0% 0% no-repeat padding-box;
+    background: #110b53 0% 0% no-repeat padding-box;
     border-radius: 30px;
     opacity: 1;
 }
-
-
-
 
 /* Style the sidenav links and the dropdown button */
 .sidenav a,
@@ -338,8 +321,6 @@ body {
     padding-right: 8px;
 }
 
-
-
 .menu-dark {
     background: #ffffff2b;
 }
@@ -349,18 +330,15 @@ body {
     backdrop-filter: brightness(0.8);
 }
 
-
 .light {
     opacity: 1;
 }
-
 
 /* slider swiper  */
 .slide-container {
     margin: 10px;
     overflow: hidden;
 }
-
 
 .card .image-box {
     height: 200px;
@@ -409,13 +387,9 @@ body {
     font-size: 18px;
 }
 
-
-
 #img-article img {
     margin: auto;
 }
-
-
 
 .market-image {
     perspective: 1000px;
@@ -428,7 +402,6 @@ img {
 .market-image:hover img {
     transform: translate3d(calc(-50% + mouseX), calc(-50% + mouseY), 0);
 }
-
 
 .market-image {
     position: relative;
@@ -461,44 +434,157 @@ img {
     stroke: #1d213b;
 }
 
-
-.dropdown_menu_dash{
+.dropdown_menu_dash {
     inset: 10px 12px auto auto !important;
 }
 
-
-
 /* slider class */
 
-
 .slider {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
 }
 
 .slider img {
-  display: none;
+    display: none;
 }
 
 .slider img:first-child {
-  display: block;
+    display: block;
 }
 
 .slider button {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .slider button.prev {
-  left: 0;
+    left: 0;
 }
 
 .slider button.next {
-  right: 0;
+    right: 0;
 }
+
+/* switch button */
+
+.switch-button {
+    border-radius: 30px;
+    background-color: #ffffff2b;
+    overflow: hidden;
+    width: 240px;
+    text-align: center;
+    font-size: 18px;
+    letter-spacing: 1px;
+    color: #fff;
+    position: relative;
+    padding-right: 120px;
+    position: relative;
+}
+.switch-button:before {
+    content: "تومان";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 3;
+    pointer-events: none;
+}
+.switch-button-checkbox {
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    z-index: 2;
+}
+.switch-button-checkbox:checked + .switch-button-label:before {
+    transform: translateX(120px);
+    transition: transform 300ms linear;
+}
+.switch-button-checkbox + .switch-button-label {
+    position: relative;
+    padding: 15px 0;
+    display: block;
+    user-select: none;
+    pointer-events: none;
+}
+.switch-button-checkbox + .switch-button-label:before {
+    content: "";
+    background: #08b5bd;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    border-radius: 30px;
+    transform: translateX(0);
+    transition: transform 300ms;
+}
+.switch-button-checkbox + .switch-button-label .switch-button-label-span {
+    position: relative;
+}
+
+/* tab */
+
+.btn_tab_s {
+    background: transparent;
+    border: 0;
+    outline: 0;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: brightness(0.6);
+    line-height: 30px;
+}
+.clearfix::after {
+    display: block;
+    content: "";
+    clear: both;
+}
+
+.tab_wrap .btn_tab.act {
+    background: #08b5bd;
+}
+.tab_wrap .content_area {
+    display: none;
+    width: 100%;
+    min-height: 200px;
+    box-sizing: border-box;
+}
+.tab_wrap .content_area.act {
+    display: block;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: brightness(0.6);
+}
+
+
+/* dropdown */
+select:not([size]) {
+    background-image: none;
+    background-position: unset;
+    background-repeat: unset;
+    background-size: unset;
+    padding-right: unset;
+}
+
+.custom-dropdown select option{
+    border: none;
+}
+.custom-dropdown select{
+    border: none;
+}
+
 
 
 
