--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -675,3 +675,7 @@ display: -webkit-box;
 -webkit-box-orient: vertical;
 -webkit-line-clamp: 2;
 }
+#accordion-open h2 button[aria-expanded="true"] {
+    @apply bg-dark5;
+    @apply bg-slate-200;
+}
