--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -316,7 +316,7 @@ body {
 .active {
     color: aqua;
 }
-.active svg path{
+.active svg path {
     stroke: #08b5bd;
 }
 
@@ -446,7 +446,9 @@ img {
 }
 
 .dropdown_menu_dash {
-    inset: 10px 12px auto auto !important;
+    -webkit-box-shadow: 0px 0px 50px -20px rgba(8, 181, 189, 1);
+    -moz-box-shadow: 0px 0px 50px -20px rgba(8, 181, 189, 1);
+    box-shadow: 0px 0px 50px -20px rgba(8, 181, 189, 1);
 }
 
 /* slider class */
@@ -549,12 +551,8 @@ img {
 /* tab */
 
 .btn_tab_s {
-    background: transparent;
     border: 0;
     outline: 0;
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: brightness(0.6);
     line-height: 30px;
 }
 .clearfix::after {
@@ -565,6 +563,7 @@ img {
 
 .tab_wrap .btn_tab.act {
     background: #08b5bd;
+    color: white;
 }
 .tab_wrap .content_area {
     display: none;
@@ -574,9 +573,6 @@ img {
 }
 .tab_wrap .content_area.act {
     display: block;
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: brightness(0.6);
 }
 
 /* dropdown */
@@ -625,10 +621,9 @@ select:not([size]) {
     font-size: x-large !important;
 }
 
-
 /* articles */
 
-.text_articles p img{
+.text_articles p img {
     width: 100% !important;
     height: auto !important;
     margin-left: auto !important;
@@ -636,16 +631,16 @@ select:not([size]) {
     border-radius: 30px !important;
     transition: 1s;
 }
-.text_articles p img:hover{
+.text_articles p img:hover {
     -webkit-box-shadow: 0px 0px 128px -48px rgba(8, 181, 189, 1);
     -moz-box-shadow: 0px 0px 128px -48px rgba(8, 181, 189, 1);
     box-shadow: 0px 0px 128px -48px rgba(8, 181, 189, 1);
 }
-.text_articles p{
+.text_articles p {
     text-align: justify;
 }
 
-.tradingview-widget-container iframe{
+.tradingview-widget-container iframe {
     width: 100%;
     height: inherit;
 }
@@ -655,27 +650,68 @@ select:not([size]) {
 }
 
 .tabs__tab--selected {
-    background-color: color('green');
+    background-color: color("green");
 }
 .tab_list[aria-selected="true"] {
     @apply bg-green;
     @apply text-white;
     @apply dark:text-white;
-    @apply dark:bg-green
+    @apply dark:bg-green;
 }
-.line-clamp-1{
+.line-clamp-1 {
     overflow: hidden;
-display: -webkit-box;
--webkit-box-orient: vertical;
--webkit-line-clamp: 1;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
 }
-.line-clamp-2{
+.line-clamp-2 {
     overflow: hidden;
-display: -webkit-box;
--webkit-box-orient: vertical;
--webkit-line-clamp: 2;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+}
+.line-clamp-3_table {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
 }
 #accordion-open h2 button[aria-expanded="true"] {
     @apply bg-dark5;
     @apply bg-slate-200;
+}
+.dashboard_back {
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: brightness(0.7);
+}
+
+*::-webkit-scrollbar-track {
+    /* -webkit-box-shadow: inset 0 0 6px #1D213B; */
+    background-color: #dddddd;
+    border-radius: 10px;
+    backdrop-filter: brightness(0.5);
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+*::-webkit-scrollbar {
+    width: 10px;
+    /* background-color: #f5f5f5; */
+    border-radius: 10px;
+    backdrop-filter: brightness(0.5);
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+*::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-image: -webkit-gradient(
+        linear,
+        left bottom,
+        left top,
+        color-stop(0.44, #453e6a),
+        color-stop(0.72, #685a8f),
+        color-stop(0.86, #7645ae)
+    );
 }
